@@ -1,3 +1,7 @@
+2008-Sep-01  yselkowitz
+
+	* bin/cygport.in (__check_function_ro): New function.
+
 2008-Aug-31  yselkowitz
 
 	* bin/cygport.in (__prepinstalldirs):
